--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -1,26 +1,16 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: build and deploy backend
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
     paths: ["backend/**"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
-  deploy:
+  push-to-registry:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -33,6 +23,4 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - run: |
-          docker build . -t contoso.azurecr.io/k8sdemo:${{ github.sha }}
-          docker push contoso.azurecr.io/k8sdemo:${{ github.sha }}
+      - run: docker build . -t contoso.azurecr.io/k8sdemo:${{ github.sha }} && docker push contoso.azurecr.io/k8sdemo:${{ github.sha }}
