--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -8,25 +8,19 @@ on:
   workflow_dispatch:
 
 jobs:
-  list-directory:
+  push-to-registry:
     runs-on: ubuntu-latest
-
     steps:
-        - name: Print the input name to STDOUT
-          run: ls
-#  push-to-registry:
-#    runs-on: ubuntu-latest
-#    steps:
-#        uses: actions/checkout@v3
-#      - name: Setup Node
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 16
-#      - name: Azure Container Registry Login
-#        uses: Azure/docker-login@v1
-#        with:
-#          login-server: contoso.azurecr.io
-#          username: ${{ secrets.REGISTRY_USERNAME }}
-#          password: ${{ secrets.REGISTRY_PASSWORD }}
-#
-#      - run: docker build . -t contoso.azurecr.io/k8sdemo:${{ github.sha }} && docker push contoso.azurecr.io/k8sdemo:${{ github.sha }}
+        uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Azure Container Registry Login
+        uses: Azure/docker-login@v1
+        with:
+          login-server: contoso.azurecr.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - run: docker build . -t contoso.azurecr.io/k8sdemo:${{ github.sha }} && docker push contoso.azurecr.io/k8sdemo:${{ github.sha }}
