--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -20,17 +20,11 @@ jobs:
       - name: Azure Container Registry Login
         uses: Azure/docker-login@v1
         with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          login-server: chessspeechrecognition.azurecr.io
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
-      - name: Build and push image
-        uses: azure/docker-login@v1
-        with:
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-      - run: |
-          docker build backend -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
+
+      - run: docker build backend -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition && docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
 
       - name: Deploy to Azure Container Instances
         uses: Azure/aci-deploy@v1
@@ -42,3 +36,5 @@ jobs:
           registry-username: ${{ secrets.REGISTRY_USERNAME }}
           registry-password: ${{ secrets.REGISTRY_PASSWORD }}
           name: aci-sampleapp
+
+
