--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Azure Container Registry Login
         uses: Azure/docker-login@v1
         with:
-          login-server: chessspeechrecognition.azurecr.io
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
@@ -31,7 +31,7 @@ jobs:
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
 
       - name: Deploy to Azure Container Instances
-        uses: Azure/aci-deploy@v1
+        uses: Azure/docker-login@v1
         with:
           registry-username: ${{ secrets.REGISTRY_USERNAME }}
           registry-password: ${{ secrets.REGISTRY_PASSWORD }}
