--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -31,14 +31,15 @@ jobs:
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
 
       - name: Deploy to Azure Container Instances
-        uses: Azure/docker-login@v1
+        uses: Azure/aci-deploy@v1
         with:
-          registry-username: ${{ secrets.REGISTRY_USERNAME }}
-          registry-password: ${{ secrets.REGISTRY_PASSWORD }}
           resource-group: ${{ secrets.RESOURCE_GROUP }}
-          dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
+          dns-name-label: ${{ secrets.RESOURCE_GROUP }}:latest
           image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition:latest
           registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          registry-username: ${{ secrets.REGISTRY_USERNAME }}
+          registry-password: ${{ secrets.REGISTRY_PASSWORD }}
           name: chess-speech-recognition
+          location: 'west us'
 
 
