--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -29,6 +29,11 @@ jobs:
       - run: |
           docker build backend -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
+          
+      - name: Azure CLI Login
+        uses: azure/login@v1
+        with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Container Instances
         uses: Azure/aci-deploy@v1
