--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.7",
+    "sass": "^1.56.0",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "cm-chessboard": "^5.2.7",
+    "js-chess-engine": "^1.0.2",
+    "modern-normalize": "^1.1.0",
     "solid-js": "^1.5.1"
   }
 }
