--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -37,17 +37,17 @@ jobs:
           node-version: 16
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
-        with: 
-          working-directory: './frontend'
+        with:
+          working-directory: "./frontend"
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Build
-        working-directory: './frontend'
-        run: VITE_BASE_URL=${GITHUB_REPOSITORY#*/} yarn build
+        working-directory: "./frontend"
+        run: VITE_API_BASE_URL=${secrets.VITE_API_BASE_URL} VITE_BASE_URL=${GITHUB_REPOSITORY#*/} yarn build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: './frontend/dist'
+          path: "./frontend/dist"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
