--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -43,7 +43,10 @@ jobs:
         uses: actions/configure-pages@v2
       - name: Build
         working-directory: "./frontend"
-        run: VITE_API_BASE_URL=${secrets.VITE_API_BASE_URL} VITE_BASE_URL=${GITHUB_REPOSITORY#*/} yarn build
+        run: yarn build
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
+          VITE_BASE_URL: ${{ GITHUB_REPOSITORY#*/ }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
