--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -1,45 +1,59 @@
-name: build and deploy backend
+name: Trigger auto deployment for chess-speech-recognition backend
 
+# When this action will be executed
 on:
   push:
-    branches: ["main"]
-    paths: ["backend/**"]
+    branches: 
+      [ main ]
+    paths:
+    - '**'
+    - "backend/**"
 
-  workflow_dispatch:
+  # Allow mannually trigger 
+  workflow_dispatch:      
 
 jobs:
-  push-to-registry:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
-        
-      - name: Azure CLI Login
+      - name: Checkout to the branch
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to container registry
+        uses: docker/login-action@v1
+        with:
+          registry: pjatk.azurecr.io
+          username: ${{ secrets.CHESSSPEECHRECOGNITION_REGISTRY_USERNAME }}
+          password: ${{ secrets.CHESSSPEECHRECOGNITION_REGISTRY_PASSWORD }}
+
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: pjatk.azurecr.io/chess-speech-recognition:${{ github.sha }}
+          file: ./backend/Dockerfile
+          context: ./backend
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Azure Login
         uses: azure/login@v1
         with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
-            
-      - name: Build and push image
-        uses: azure/docker-login@v1
+          creds: ${{ secrets.CHESSSPEECHRECOGNITION_AZURE_CREDENTIALS }}
+
+
+      - name: Deploy to containerapp
+        uses: azure/CLI@v1
         with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-      - run: |
-          docker build backend -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition
-    
-
-      - name: Deploy to Azure Container Instances
-        uses: Azure/aci-deploy@v1
-        with:
-          resource-group: ${{ secrets.RESOURCE_GROUP }}
-          dns-name-label: chess-speech-recognition
-          image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/chess-voice-recognition:latest
-          registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          registry-username: ${{ secrets.REGISTRY_USERNAME }}
-          registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-          name: chess-voice-recognition
-          location: 'northeurope'
-
-
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
+            az containerapp registry set -n chess-speech-recognition -g PJATK_ZUM --server pjatk.azurecr.io --username  ${{ secrets.CHESSSPEECHRECOGNITION_REGISTRY_USERNAME }} --password ${{ secrets.CHESSSPEECHRECOGNITION_REGISTRY_PASSWORD }}
+            az containerapp update -n chess-speech-recognition -g PJATK_ZUM --image pjatk.azurecr.io/chess-speech-recognition:${{ github.sha }}
